Signed-off-by: bernie <bernie@hyx.com> update

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "repository": "",
   "keywords": [
-    "Maizuo"
+    "Daisinuo"
   ],
-  "author": "Table",
-  "license": "BSD"
+  "author": "Bernie",
+  "license": "MIT"
 }
