--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #Mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/springmvc?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://120.24.87.155:3306/chen?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=chenxiaobin3119
